Added crazy mode

--- a/TP1/src/index.html
+++ b/TP1/src/index.html
@@ -22,6 +22,7 @@
               <div id="info-text">
                 Il y a : <span class="dot-count"></span> <span class="dot-label">points</span>
               </div>
+              <button id="rainbow-btn">Crazy Mode</button>
               <button id="update-btn">Actualiser</button>
             </div>
         
